@@ -3,6 +3,7 @@ package azul;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 abstract class TileHolder {
     protected final List<Tile> tiles;
@@ -20,13 +21,14 @@ abstract class TileHolder {
     }
 
     /**
-     * Returns all tiles from the tileholder from the specific color
-     * 
+     * Pop all tiles from the tileholder of the specific color
+     *
      * @param color
      * @return
      */
     protected Optional<List<Tile>> popTiles(Color color) {
-        List<Tile> popped = tiles.stream().filter(t -> t.getColor() == color).toList();
+        List<Tile> popped =
+                tiles.stream().filter(t -> t.getColor() == color).collect(Collectors.toList());
 
         if (popped.isEmpty())
             return Optional.empty();
@@ -34,5 +36,4 @@ abstract class TileHolder {
         tiles.removeIf(t -> t.getColor() == color);
         return Optional.of(popped);
     }
-
 }
